--- a/src/app/core/components/loader/loader.component.html
+++ b/src/app/core/components/loader/loader.component.html
@@ -1,7 +1,7 @@
 @if(loaderService.isLoading$ | async) {
   <div class="container">
     <div class="content">
-      <app-poker-chip />
+      <app-poker-chip></app-poker-chip>
       <img src="/svgs/pragma-logo.svg" alt="">
     </div>
   </div>
