--- a/src/app/design-system/atoms/avatar-field/avatar-field.component.html
+++ b/src/app/design-system/atoms/avatar-field/avatar-field.component.html
@@ -1,6 +1,5 @@
 <div
-  class="avatar"
-  [ngClass]="[classSize, classVariant]"
+  [ngClass]="classAvatar"
   [style.background-image]="backgroundImageAvatar"
 >
   @if (isVariantText) {
