--- a/src/app/design-system/atoms/button-field/button-field.component.html
+++ b/src/app/design-system/atoms/button-field/button-field.component.html
@@ -1,7 +1,7 @@
 <button
   [type]="type"
   [disabled]="disabled"
-  [ngClass]="[classColor, classSize, classVariant, classIcon]"
+  [ngClass]="classButton"
 >
   <ng-content></ng-content>
 </button>
