--- a/src/app/shared/components/card-selector/card-selector.component.html
+++ b/src/app/shared/components/card-selector/card-selector.component.html
@@ -12,7 +12,7 @@
         @if (card.type === CardSelectorType.Text) {
           <span slot="inside">{{ card.value }}</span>
         } @else {
-          <img slot="inside" [src]="card.value" />
+          <img slot="inside" [src]="card.value">
         }
       </app-poker-card>
     }
