--- a/src/app/shared/components/poker-card/poker-card.component.scss
+++ b/src/app/shared/components/poker-card/poker-card.component.scss
@@ -29,6 +29,8 @@
     display: grid;
     place-content: center;
     color: colors.$pds-color-white-50;
+    overflow-x: hidden;
+
 
     &:not(.is-selected):hover {
       box-shadow:
