--- a/src/app/shared/components/toast-container/toast-container.component.html
+++ b/src/app/shared/components/toast-container/toast-container.component.html
@@ -6,6 +6,6 @@
       [type]="toastMessage.type"
       [variant]="toastMessage.variant"
       (close)="toastService.removeToast(toastMessage.id)"
-    />
+    ></app-toast>
   }
 </div>
