--- a/src/app/core/components/page/page.component.html
+++ b/src/app/core/components/page/page.component.html
@@ -1,6 +1,6 @@
 <div class="container">
-  <app-loader />
-  <app-header />
-  <app-toast-container />
-  <router-outlet />
+  <app-loader></app-loader>
+  <app-header></app-header>
+  <app-toast-container></app-toast-container>
+  <router-outlet></router-outlet>
 </div>
