--- a/src/app/shared/components/poker-card-list/poker-card-list.component.html
+++ b/src/app/shared/components/poker-card-list/poker-card-list.component.html
@@ -4,7 +4,13 @@
       <app-poker-card
         [isVisible]="pokerCard.isVisible"
         [isSelected]="pokerCard.isSelected"
-      >{{ pokerCard.name}}</app-poker-card>
+      >
+        {{ pokerCard.name}}
+
+        @if (gameStatus === GameStatusEnum.Reset) {
+          <span slot="inside">{{ pokerCard.cardSelected }}</span>
+        }
+      </app-poker-card>
     }
 
     @if (pokerCard.displayMode === DisplayModeEnum.Spectator) {
@@ -13,7 +19,7 @@
           [text]="pokerCard.name"
           [variant]="AvatarFieldVariantEnum.TextPurpleLigth"
           [size]="AvatarFieldSizeEnum.Large"
-        />
+        ></app-avatar-field>
 
         <span>{{ pokerCard.name}}</span>
       </div>
@@ -21,13 +27,14 @@
   </div>
 }
 
-<div
-  class="context-menu"
-  [style.top.px]="contextMenuPosition.y"
-  [style.left.px]="contextMenuPosition.x"
-  *ngIf="contextMenuVisible"
->
-  <ul>
-    <li (click)="convertToAdmin()">Convert to Admin</li>
-  </ul>
-</div>
+@if (contextMenuVisible) {
+  <div
+    class="context-menu"
+    [style.top.px]="contextMenuPosition.y"
+    [style.left.px]="contextMenuPosition.x"
+  >
+    <ul>
+      <li (click)="convertToAdmin()">Convert to Admin</li>
+    </ul>
+  </div>
+}
