feat: add lint to the project :construction:

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -37,6 +37,6 @@
   </div>
 
   @if (showInvitePlayers) {
-    <app-invite-players (close)="showInvitePlayers = false"></app-invite-players>
+    <app-invite-players (closeModal)="showInvitePlayers = false"></app-invite-players>
   }
 </div>
