--- a/src/app/design-system/molecules/toast/toast.component.html
+++ b/src/app/design-system/molecules/toast/toast.component.html
@@ -15,5 +15,5 @@
     }
   </div>
 
-  <i-feather name="x" [ngClass]="classIconClose" (click)="closeToast()"></i-feather>
+  <i-feather name="x" [ngClass]="classIconClose" (click)="handleClose()"></i-feather>
 </div>
