--- a/src/app/shared/components/invite-players/invite-players.component.html
+++ b/src/app/shared/components/invite-players/invite-players.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="header">
       <div class="title">Invitar jugadores</div>
-      <i-feather name="x" class="close" (click)="onClose()"></i-feather>
+      <i-feather name="x" class="close" (click)="handleClose()"></i-feather>
     </div>
 
     <div class="content">
