--- a/src/app/shared/components/poker-card-list/poker-card-list.component.html
+++ b/src/app/shared/components/poker-card-list/poker-card-list.component.html
@@ -34,7 +34,11 @@
     [style.left.px]="contextMenuPosition.x"
   >
     <ul>
-      <li (click)="convertToAdmin()">Convert to Admin</li>
+      <li
+        (click)="convertToAdmin()"
+        tabindex="0"
+        (keydown)="handleKeydown($event)"
+      >Convert to Admin</li>
     </ul>
   </div>
 }
